# near-rss

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
configuration/: base.yaml  production.yaml
migrations/: 20221112042001_create_users_table.sql  20221112063027_create_items_table.sql  20221112063059_create_subscriptions_table.sql
public/: README.md  index.html  manifest.json  service-worker.js
public/javascripts/: awesomefont.js  connector.js  control.js  main.js  pwa.js  state.js  view.js
public/styles/: styles.css
scripts/: import.py
src/: configuration.rs  lib.rs  main.rs  refresh.rs
src/common/: debug.rs  error.rs  mod.rs  telemetry.rs  token.rs
src/database/: items.rs  mod.rs  subscriptions.rs  users.rs
src/greader/: item.rs
src/middlewares/: auth.rs  di.rs  mod.rs
src/routes/: accounts.rs  mod.rs
src/routes/api/: mod.rs
src/routes/reader/: edit.rs  mod.rs  stream.rs  subscriptions.rs  users.rs
src/routes/ui/: index.rs  login.rs  mod.rs
src/services/: feeds.rs  mod.rs  stream.rs  subscriptions.rs  users.rs
src/user/: mod.rs
templates/: index.html.tera  login.html.tera
tests/: helpers.rs  main.rs
tests/api/: data.rs  files.rs  helpers.rs  login.rs  main.rs  ping.rs  read.rs  subscriptions.rs  unread.rs  user.rs
