[package]
authors = ["Nearsyh <nearsyh@gmail.com>"]
edition = "2018"
name = "near-rss"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1"
anyhow = "1.0"
feed-rs = "1.0"
futures = "0.3"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "sqlite"]}
rand = "0.8"
thiserror = "1.0"
async_once = "0.2"
lazy_static = "1.4"
log = "0.4"
clokwerk = "0.3"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
# rocket_contrib = "0.5"

# [dependencies.rocket]
# git = "https://github.com/SergioBenitez/Rocket"

# [dependencies.rocket_contrib]
# git = "https://github.com/SergioBenitez/Rocket"
# features = ["tera_templates"]
