[package]
authors = ["Nearsyh <nearsyh@gmail.com>"]
edition = "2021"
name = "near-rss"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "near-rss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1"
anyhow = "1.0"
feed-rs = "1.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"
async_once = "0.2"
lazy_static = "1.4"
log = "0.4"
clokwerk = "0.3"
rocket = { version = "0.5.0-rc.1",  features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
serde-aux = "3"
actix-web = "4"
actix-files = "0.6"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies", "blocking"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "sqlite",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
serde_json = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
portpicker = "0.1"